syntax= "proto3";

package authentication;
option go_package="generated/proto";

import "grpc/start-registration.proto";
import "grpc/signin.proto";

service Authentication {

    rpc StartRegistration(StartRegistrationRequest) returns(StartRegistrationResponse) { }

    rpc Signin(SigninRequest) returns(SigninResponse) { }
}