syntax= "proto3";

package authentication;
option go_package="generated/proto";

message SigninRequest {

    string email= 1;
    string password= 2;
}

message SigninResponse {
    optional string error= 1;

    string jwt= 2;
}