syntax= "proto3";

package authentication;
option go_package="generated/proto";

message StartRegistrationRequest {

    string email= 1;
    string username= 2;
    string password= 3;
}

message StartRegistrationResponse {
    repeated string errors= 1;
}